src/frontend/assets/styles/views/scroller.scss
[data-scrollable-parent] {
  overflow: hidden;
  width: 100%;
  position: relative;
}

[data-scrollable] {
  position: absolute;
  top: 0;
  left: 0;
  margin: 0; // remove margin to correctly calculate offset to parent

  transition: transform 0.25s;
  transform: translateX(calc(var(--scrollValue, 0) * 1px));
}

.scroller-btn {
  display: none;
  position: relative;
  z-index: 1;
  width: 50px;
  height: 50px;
  background: blue;
  border-radius: 50px;
  color: orange;

  &:not([disabled]):hover {
    cursor: pointer;
  }

  &--visible {
    display: block;
  }
}

